data.vlaanderen.be: variant index 2

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <h1>data.vlaanderen.be</h1>
   <ul>
     <li><a href="data.vlaanderen.be/index.html" target="_blank">Home pagina</a></li>
+    <li><a href="data.vlaanderen.be/index2.html" target="_blank">Home pagina variant</a></li>
     <li><a href="data.vlaanderen.be/ns.html" target="_blank">ns</a></li>
   </ul>
 </body>
