--- a/data.vlaanderen.be/ns.html
+++ b/data.vlaanderen.be/ns.html
@@ -49,8 +49,23 @@
 				<div class="layout layout--wide" id="introductie">
 					<div class="grid">
 						<div class="col--8-12 col--12-12--s">
-							Op 31 maart 2017 werden een aantal vocabularia en applicatieprofielen als kandidaat-standaard gepubliceerd door de werkgroep OSLO² van Informatie Vlaanderen. Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze kandidaat-standaarden. Na deze evaluatieperiode, waarbij aan de hand van referentie implementaties de robuustheid en de volledigheid van de vocabularia en de applicatieprofielen worden getest, worden de OSLO² specificaties gepromoot tot volwaardige standaarden. </p><br>
-							<p>Feedback kan je geven via <a href="mailto:oslo@kb.vlaanderen.be">email</a> of als een topic in onze <a href="https://github.com/Informatievlaanderen/OSLO-Public-Discussion">publieke reviewdiscussielijst</a>.</p>
+							<p>De vocabularia op deze pagina zijn de basis voor open semantische informatiestandaarden, ze bieden een gedeeld begrippenkader voor bepaalde concepten met een focus op gegevensuitwisseling en zijn tot stand gekomen in de werkgroep <a href="https://overheid.vlaanderen.be/producten-diensten/OSLO2" target="_blank">OSLO²</a> van Informatie Vlaanderen.</p><br>
+
+							<p>Semantische afstemming zorgt er voor dat informatiemodellen gebruik maken van eenduidige termen waar een bijbehorende definitie kan voor opgezocht worden. Dit komt interoperabiliteit tussen toepassingen ten goede door dubbelzinnigheid en onduidelijkheid te elimineren. Daarnaast zorgt het voor breder gedragen informatiemodellen door silodenken te vermijden.</p><br>
+
+							<p>Een applicatieprofiel is een specificatie voor gegevensuitwisseling voor applicaties die een bepaalde use case vervullen. Het laat toe om bijkomende restricties op te leggen, zoals het vastleggen van kardinaliteiten of het gebruik van bepaalde codelijsten. Een applicatieprofiel kan dienen als documentatie voor analisten en ontwikkelaars.</p><br>
+
+							<p>De informatie in de vocabularia en applicatieprofielen is georganiseerd volgens het <a href="http://www.w3.org/TR/2004/REC-rdf-primer-20040210/" target="_blank">Resource Description Framework (RDF)</a>, wat ze geschikt maakt voor gebruik in Linked Data toepassingen.</a></p><br>
+
+					        <div class="alert alert--cta">
+					          <div class="alert__content">
+					            <div class="alert__title">Op 31 maart 2017 werden deze vocabularia en applicatieprofielen als kandidaat-standaard gepubliceerd door de werkgroep OSLO² van Informatie Vlaanderen.</div>
+					            <div class="alert__message">
+					              	<p>Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze kandidaat-standaarden. Na deze evaluatieperiode, waarbij aan de hand van referentie implementaties de robuustheid en de volledigheid van de vocabularia en de applicatieprofielen worden getest, worden de OSLO² specificaties gepromoot tot volwaardige standaarden.</p><br>
+									<p>Feedback kan je geven via <a href="mailto:oslo@kb.vlaanderen.be">email</a> of als een topic in onze <a href="https://github.com/Informatievlaanderen/OSLO-Public-Discussion">publieke reviewdiscussielijst</a>.</p>
+					            </div>
+					          </div>
+					        </div>
 						</div>
 
 
@@ -60,14 +75,12 @@
 									<div class="side-navigation__group">
 										<ul>
 											<li class="side-navigation__item">
-												<a href="#vocabularia">Vocabularia</a>
-											</li>
-
-
-											<li class="side-navigation__item">
 												<a href="#applicatieprofielen">Applicatieprofielen</a>
 											</li>
 
+											<li class="side-navigation__item">
+												<a href="#vocabularia">Vocabularia</a>
+											</li>
 
 											<li class="side-navigation__item">
 												<a href="#veelgestelde-vragen">Veelgestelde vragen</a>
@@ -84,7 +97,10 @@
 
 										<ul>
 											<li class="side-navigation__item">
-												<a class="link--icon--caret link--icon--block" href="https://docs.google.com/document/d/1tbK17wmgkIlNOXjYRE3Arf3PMI--8TvidBprKOcgcvQ/edit?usp=sharing">Handleiding</a>
+												<a class="link--icon--caret link--icon--block" href="https://overheid.vlaanderen.be/producten-diensten/OSLO2" target="_blank">OSLO²</a>
+											</li>
+											<li class="side-navigation__item">
+												<a class="link--icon--caret link--icon--block" href="https://docs.google.com/document/d/1tbK17wmgkIlNOXjYRE3Arf3PMI--8TvidBprKOcgcvQ/edit?usp=sharing" target="_blank">Handleiding</a>
 											</li>
 										</ul>
 									</div>
@@ -98,7 +114,60 @@
 
 			<section>
 				<div class="layout layout--wide" id="introductie">
-					<h2 class="h2 u-named-anchor" id="vocabularia">De volgende vocabularia zijn beschikbaar</h2>
+					<h2 class="h2 u-named-anchor" id="applicatieprofielen">Applicatieprofielen</h2>
+
+
+					<div id="doormats">
+						<ul class="grid grid--is-stacked js-equal-height-container">
+							<li class="col--4-12 col--1-2--s col--12-12--xs">
+								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+								<div class="doormat__title">
+									Applicatieprofiel Generiek Basis
+								</div>
+								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van algemene concepten als contactinformatie, geometrieën en herkomstinformatie.</span></a>
+							</li>
+
+
+							<li class="col--4-12 col--1-2--s col--12-12--xs">
+								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+								<div class="doormat__title">
+									Applicatieprofiel Adresregister
+								</div>
+								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van adresgegevens in de context van een adresregister (CRAB).</span></a>
+							</li>
+
+
+							<li class="col--4-12 col--1-2--s col--12-12--xs">
+								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+								<div class="doormat__title">
+									Applicatieprofiel Organisatie Basis
+								</div>
+								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van adresgegevens in de context van een organisatieregister.</span></a>
+							</li>
+
+
+							<li class="col--4-12 col--1-2--s col--12-12--xs">
+								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+								<div class="doormat__title">
+									Applicatieprofiel Persoon Basis
+								</div>
+								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van persoonsgegevens in de context vaan een personenregister of bij het uitvoeren van publieke dienstverlening.</span></a>
+							</li>
+
+
+							<li class="col--4-12 col--1-2--s col--12-12--xs">
+								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+								<div class="doormat__title">
+									Applicatieprofiel Dienstencataloog
+								</div>
+								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van gegevens met betrekking tot publieke dienstverlening in de context van een dienstencataloog.</span></a>
+							</li>
+						</ul>
+					</div>
+					<br>
+					<br>
+
+					<h2 class="h2 u-named-anchor" id="vocabularia">Vocabularia</h2>
 
 
 					<div id="doormats">
@@ -148,60 +217,6 @@
 							</li>
 						</ul>
 					</div>
-					<br>
-					<br>
-
-
-					<h2 class="h2 u-named-anchor" id="applicatieprofielen">De volgende applicatieprofielen zijn beschikbaar</h2>
-
-
-					<div id="doormats">
-						<ul class="grid grid--is-stacked js-equal-height-container">
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Applicatieprofiel Generiek Basis
-								</div>
-								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van algemene concepten als contactinformatie, geometrieën en herkomstinformatie.</span></a>
-							</li>
-
-
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Applicatieprofiel Adresregister
-								</div>
-								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van adresgegevens in de context van een adresregister.</span></a>
-							</li>
-
-
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Applicatieprofiel Organisatie Basis
-								</div>
-								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van adresgegevens in de context van een organisatieregister.</span></a>
-							</li>
-
-
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Applicatieprofiel Persoon Basis
-								</div>
-								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van persoonsgegevens in de context vaan een personenregister of bij het uitvoeren van publieke dienstverlening.</span></a>
-							</li>
-
-
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Applicatieprofiel Dienstencataloog
-								</div>
-								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van gegevens met betrekking tot publieke dienstverlening in de context van een dienstencataloog.</span></a>
-							</li>
-						</ul>
-					</div>
 				</div>
 			</section>
 
@@ -221,7 +236,7 @@
 										<li class="col--6-12 col--12-12--s">
 											<ul class="link-list">
 												<li>
-													<a class="toggle--arrow-down link--icon--caret link--block" data-drawer-content-id="270933" data-drawer-id="related-questions" href="#">Wat is een vocabularium en applicatieprofiel en hoe verhouden beiden zich tegenover elkaar?</a>
+													<a class="toggle--arrow-down link--icon--caret link--block" data-drawer-content-id="270933" data-drawer-id="related-questions" href="#">Waar lees ik meer over vocabularia, applicatieprofielen en hoe deze zich verhouden tengenover elkaar?</a>
 												</li>
 											</ul>
 										</li>
@@ -253,8 +268,7 @@
 										<div class="grid grid--align-center">
 											<div class="col--8-12 col--12-12--s col--6-12--l">
 												<div class="content typography">
-													<p>Vocabularia beschrijven semantiek, de concepten die beschreven worden zijn bruikbaar in verschillende toepassingsdomeinen. Applicatieprofielen zijn specificaties voor gegevensuitwisseling in bepaalde use cases. De OSLO&#178; vocabularia en applicatieprofielen zijn gepubliceerd als kandidaat-standaarden.</p>
-													<p>Lees hierover meer op een bevattelijke manier in deze <a href="https://overheid.vlaanderen.be/sites/default/files/documenten/informatie-vlaanderen/producten/OSLO/OSLO%20Infodag%2031032017%20Final.pdf">presentatie</a>.</p>
+													<p>Meer informatie lees je op een bevattelijke manier in deze <a href="https://overheid.vlaanderen.be/sites/default/files/documenten/informatie-vlaanderen/producten/OSLO/OSLO%20Infodag%2031032017%20Final.pdf">presentatie</a>.</p>
 												</div>
 											</div>
 										</div>
@@ -271,7 +285,7 @@
 										<div class="grid grid--align-center">
 											<div class="col--8-12 col--12-12--s col--6-12--l">
 												<div class="content typography">
-													<p>Neem hiervoor zeker onze <a href="#">documentatie</a> door.</p>
+													<p>Onze <a href="#">handleiding</a> legt in verschillende stappen uit hoe je aan de slag kan gaan met de OSLO² vocabularia en applicatieprofielen.</p>
 												</div>
 											</div>
 										</div>
