--- a/data.vlaanderen.be/index.html
+++ b/data.vlaanderen.be/index.html
@@ -137,7 +137,7 @@
 
 
 							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="#vocabularia" id="doormat">
+								<a class="doormat js-equal-height u-mobile-no-equal-height" href="/ns.html#vocabularia" id="doormat">
 								<div class="doormat__title">
 									Vocabularia
 								</div>
@@ -146,7 +146,7 @@
 
 
 							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="#applicatieprofielen" id="doormat">
+								<a class="doormat js-equal-height u-mobile-no-equal-height" href="/ns.html#applicatieprofielen" id="doormat">
 								<div class="doormat__title">
 									Applicatieprofielen
 								</div>
@@ -209,113 +209,11 @@
 					<h1 class="h1 u-named-anchor" id="Specificaties">OSLO&#178; Specificaties (kandidaat-standaarden)</h1>
 
 
-					<p>Op 31 maart 2017 werden een aantal vocabularia en applicatieprofielen als kandidaat-standaard gepubliceerd door de werkgroep OSLO&#178; van Informatie Vlaanderen. Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze kandidaat-standaarden. Na deze evaluatieperiode, waarbij aan de hand van referentie implementaties de robuustheid en de volledigheid van de vocabularia en de applicatieprofielen worden getest, worden de OSLO&#178; specificaties gepromoot tot volwaardige standaarden. Feedback kan je geven via <a href="mailto:oslo@kb.vlaanderen.be">email</a> of als een topic in onze <a href="https://github.com/Informatievlaanderen/OSLO-Public-Discussion">publieke reviewdiscussielijst</a>.</p>
+					<p>Op 31 maart 2017 werden een aantal vocabularia en applicatieprofielen als kandidaat-standaard gepubliceerd door de werkgroep OSLO&#178; van Informatie Vlaanderen. Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze kandidaat-standaarden. Na deze evaluatieperiode, waarbij aan de hand van referentie implementaties de robuustheid en de volledigheid van de vocabularia en de applicatieprofielen worden getest, worden de OSLO&#178; specificaties gepromoot tot volwaardige standaarden.</p><br>
+					<p> Feedback kan je geven via <a href="mailto:oslo@kb.vlaanderen.be">email</a> of als een topic in onze <a href="https://github.com/Informatievlaanderen/OSLO-Public-Discussion">publieke reviewdiscussielijst</a>.</p>
 					<br>
 
-
-					<h2 class="h2 u-named-anchor" id="vocabularia">De volgende vocabularia zijn beschikbaar</h2>
-
-
-					<div id="doormats">
-						<ul class="grid grid--is-stacked js-equal-height-container">
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Generiek
-								</div>
-								<span class="doormat__text">Een algemeen ondersteunend vocabularium.</span></a>
-							</li>
-
-
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Adres
-								</div>
-								<span class="doormat__text">Het Adres vocabularium legt termen en definities vast voor het beschrijven van een Belgisch adres.</span></a>
-							</li>
-
-
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Organisatie
-								</div>
-								<span class="doormat__text">Het Organisatie vocabularium legt termen en definities vast voor het beschrijven van organisaties en bouwt verder op de vocabularia van W3C en ISA.</span></a>
-							</li>
-
-
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Persoon
-								</div>
-								<span class="doormat__text">Het Persoon vocabularium legt termen en definities vast voor het beschrijven van personen en hun relaties. Het bouwt verder op vocabularia van W3C en ISA.</span></a>
-							</li>
-
-
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Dienst
-								</div>
-								<span class="doormat__text">Het Dienst vocabularium legt termen en definities vast voor het beschrijven van publieke dienstverlening. Het is gebaseerd op het Core Public Service Vocabulary Application Profile.</span></a>
-							</li>
-						</ul>
-					</div>
-					<br>
-
-
-					<h2 class="h2 u-named-anchor" id="applicatieprofielen">De volgende applicatieprofielen zijn beschikbaar</h2>
-
-
-					<div id="doormats">
-						<ul class="grid grid--is-stacked js-equal-height-container">
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Applicatieprofiel Generiek Basis
-								</div>
-								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van algemene concepten als contactinformatie, geometrieën en herkomstinformatie.</span></a>
-							</li>
-
-
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Applicatieprofiel Adresregister
-								</div>
-								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van adresgegevens in de context van een adresregister.</span></a>
-							</li>
-
-
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Applicatieprofiel Organisatie Basis
-								</div>
-								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van adresgegevens in de context van een organisatieregister.</span></a>
-							</li>
-
-
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Applicatieprofiel Persoon Basis
-								</div>
-								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van persoonsgegevens in de context vaan een personenregister of bij het uitvoeren van publieke dienstverlening.</span></a>
-							</li>
-
-
-							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
-								<div class="doormat__title">
-									Applicatieprofiel Dienstencataloog
-								</div>
-								<span class="doormat__text">Dit applicatieprofiel definieert een specificatie voor de uitwisseling van gegevens met betrekking tot publieke dienstverlening in de context van een dienstencataloog.</span></a>
-							</li>
-						</ul>
-					</div>
+					<a href="" class="link--icon--caret link--block">Ontdek hier de beschikbare vocabularia en applicatieprofielen.</a>
 				</div>
 			</section>
 
